cmake_minimum_required(VERSION 3.8)
project(waypoint_nav_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)
find_package(rclpy REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav2_msgs REQUIRED)



install(PROGRAMS
  "scripts/waypoint_manager.py"
  "scripts/waypoint_gui.py"
  DESTINATION lib/${PROJECT_NAME}
)



install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
